--- a/style/home.css
+++ b/style/home.css
@@ -1,59 +1,49 @@
-
-
-
-
-/* Editting specific id's and classes */
-
-#headimg{
+/* Header Styles */
+#headimg {
     margin-left: 50%;
     transform: translateX(-50%);
     margin-bottom: 20px;
 }
 
-#mru{
+/* Margin Right and Bottom for #mru */
+#mru {
     margin-right: 5px;
     margin-bottom: 6px;
 }
 
-#portrait{
+/* Portrait Image Styles */
+#portrait {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
     border-radius: 5px;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    
 }
 
-.link{
+/* Links */
+.link {
     color: #1100ff;
 }
 
-
-
-/* SVG styling */
-
-.bi-mortarboard{
+/* SVG Styles */
+.bi-mortarboard {
     margin-right: 9px;
     margin-top: -10px;
-    
 }
 
-
-.bi-briefcase{
+.bi-briefcase {
     margin-right: 5px;
     padding-bottom: 5px;
 }
 
-#box4{
+/* Background Box Styles */
+#box4 {
     background-color: rgba(0, 38, 49, 0.302);
 }
 
 /* Media Queries */
-
-@media screen and (max-width: 768px) {
-
-
-
-    .main{
-
+@media screen and (max-width: 1441px) {
+    .main {
         display: grid;
         grid-template-columns: auto;
         grid-template-rows: auto auto auto;
@@ -63,60 +53,57 @@
         font-size: large;
     }
 
-    #background{
-        visibility: hidden;
+    /* Hide Background for Small Screens */
+    #background {
         display: none;
     }
 
-
-    #box1{
+    /* Grid Layout for Box Elements */
+    #box1 {
         grid-column: 1/2;
         grid-row: 1/2;
     }
-    
-    #box2{
+
+    #box2 {
         grid-column: 1/2;
         grid-row: 2/3;
     }
-    
-    #box3{
+
+    #box3 {
         grid-column: 1/2;
         grid-row: 3/4;
     }
-
-
 }
 
-@media screen and (min-width: 769px) {
-
-    
-    .main{
+@media screen and (min-width: 1440px) {
+    .main {
         display: grid;
         grid-template-columns: 1fr 2fr 2fr 1fr;
         grid-template-rows: auto auto auto auto;
         margin-top: 50px;
-        padding: 15px;
-        gap: 30px;
+        padding: 2%;
+        gap: 45px;
         font-size: large;
     }
 
-    #background{
-
+    /* Reset Background Visibility for Larger Screens */
+    #background {
+        visibility: visible;
+        display: block;
     }
 
-    #box1{
+    /* Grid Layout for Box Elements */
+    #box1 {
         grid-column: 2/4;
     }
 
-    #box2{
+    #box2 {
         grid-row: 2/3;
         grid-column: 1/3;
     }
 
-    #box3{
+    #box3 {
         grid-row: 2/3;
         grid-column: 3/5;
     }
-
-
 }
