--- a/style/inspiration.css
+++ b/style/inspiration.css
@@ -1,6 +1,8 @@
 .main{
     margin-top: 50px;
-    padding: 15px;
+    padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
     gap: 30px;
     display: grid;
     grid-template-rows: auto auto;
