--- a/style/skills.css
+++ b/style/skills.css
@@ -10,8 +10,10 @@
 
 .main{
     margin-top: 50px;
-    padding: 15px;
-    gap: 30px;
+    padding: 2%;
+    padding-left: 10%;
+    padding-right: 10%;
+    gap: 45px;
     display: grid;
     grid-template-rows: auto auto;
     grid-template-columns: auto;
