--- a/style/index.css
+++ b/style/index.css
@@ -80,9 +80,10 @@
         display: grid;
         grid-template-columns: 1fr 2fr 2fr 1fr;
         grid-template-rows: auto auto auto auto;
-        margin-top: 50px;
+        margin-top: 2%;
+        margin-bottom: 2%;
         padding: 2%;
-        gap: 45px;
+        gap: 2%;
         font-size: large;
     }
 
