--- a/style/output.css
+++ b/style/output.css
@@ -1376,6 +1376,13 @@ html.dark {
 html.dark body {
   background-color: var(--color-gray-900);
 }
+body {
+  transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to;
+  transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+  transition-duration: var(--tw-duration, var(--default-transition-duration));
+  --tw-duration: 100ms;
+  transition-duration: 100ms;
+}
 select, button, .interactive-element {
   cursor: pointer;
 }
